# TradeBotProgram

./: .gitignore  Cargo.toml  airdrop.sh  package.json  program.json
src/: entrypoint.rs  error.rs  instruction.rs  processor.rs  state.rs
tests/: .env  closeTradeMarket.js  consume.js  decommissionTrader.js  helpers.js  initOpenOrders.js  initializeSerumMarket.js  initializeTradeMarket.js  initializeTrader.js  layouts.js  marketInfo.js  placeOrders.js  registerTrader.js  settle.js  simulate.js  trade.js  traderInfo.js  updateTrader.js
