[package]
name = "trade-bot"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "1.7.4"
arrayref = "0.3.6"
thiserror = "1.0.29"
borsh = "0.9.1"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
serum_dex = { version = "0.5.0", features = ["no-entrypoint"] }
anchor-lang = "0.19.0"
num_enum = "0.5.4"
bs58 = "0.4.0"

[features]
test-bpf = []

[dev-dependencies]
solana-sdk = "1.7.4"

[lib]
crate-type = ["cdylib", "lib"]
